# brbuttonsystem

./: .gitignore  .gitmodules  LICENSE  README.md
docs/: BR System protocol.mm  Button menus.mm  HAL.uxf  controller_api.uxf  hardware.uxf  top_level_structure.uxf  top_states.uxf
kicadlib/: brbuttonsystem.lib
kicadlib/brbuttonsystem.pretty/: A1501WR-S-5P.kicad_mod  BarrelJack_Horizontal_4.2.kicad_mod  CC1101_MOD.kicad_mod  DG142R-5.08-02P.kicad_mod  DIP40_module.kicad_mod  K3-2235D.kicad_mod  K3-2346D.kicad_mod  LCD_1_8_SPI.kicad_mod  LCD_2.8_SPI.kicad_mod  OLED_0.91.kicad_mod  OLED_0.96_I2C.kicad_mod  PJ-001-H.kicad_mod  Wago 250-3.5-2P-2.kicad_mod  buzz17.kicad_mod
proto/: desc.h
proto/proto_usb_conn/: build.gradle  settings.gradle
proto/usb_communication/: .cproject  .mxproject  .project  UsbHidCheck.elf.launch  UsbHidCheck.ioc
proto/usb_communication/Debug/: UsbHidCheck.elf  UsbHidCheck.list  UsbHidCheck.map  makefile  objects.list  sources.mk
proto/usb_communication/Inc/: main.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h  usbd_conf.h
proto/usb_communication/Release/: UsbHidCheck.elf  UsbHidCheck.hex  UsbHidCheck.list  UsbHidCheck.map  makefile  objects.list  sources.mk
proto/usb_communication/Src/: btctrl.c  btctrl.h  entertainmentctrl.c  entertainmentctrl.h  ili9341commands.h  lcdctrl.c  lcdctrl.h  main.c  playersledsctrl.c  playersledsctrl.h  stm32f1xx_hal_msp.c  stm32f1xx_it.c  usb_device.c  usbd_custom_hid_if.c  usbd_desc.c
v1/bootloader/: .cproject  .project  HIDBOOTLOADER.map  Makefile  main.c
v1/docs/: README.md  bootloader.md  memory_layout.md
v1/firm/: .mxproject  Makefile  STM32Make.make  firm.ioc
v1/firm-stm32/: .cproject  .mxproject  .project  brsystem.ioc
v1/firm/Docs/: connection_state.plantuml
v1/firm/Inc/: DeviceMacros.h  main.h  stm32f1xx_it.h  usbd_conf.h
v1/firm/Src/: main.c  stm32f1xx_it.c  usbd_conf.c  usbd_custom_hid_if.c  usbd_desc.c
v1/firmwaretests/: CMakeLists.txt  STM32Make.make  mytests.cpp
v1/firmwaretests/mocks/: BaseMock.h  BtCtrlMock.cpp  CMakeLists.txt  RemoteMessagesProcessorMock.cpp
v1/firmwaretests/tests/: CMakeLists.txt  ConnectionCtrlTest.cpp  maintests.cpp
v1/hard/combi_button/: combi_button-cache.lib  combi_button.kicad_pcb  combi_button.pro  combi_button.sch  fp-info-cache  fp-lib-table
v1/hard/combi_indicator/: combi_indicator-cache.lib  combi_indicator.kicad_pcb  combi_indicator.pro  combi_indicator.sch  fp-info-cache  stepup.ods
v1/hard/wireless_button/: sym-lib-table  wireless_button-cache.lib  wireless_button.kicad_pcb  wireless_button.pro  wireless_button.sch
v1/soft/MobileApp/: build.gradle  gradle.properties  (+1 more)
(+331 files in other folders)
